--- a/views/usuarios/objetos/listado/bottom.ejs
+++ b/views/usuarios/objetos/listado/bottom.ejs
@@ -2,7 +2,7 @@
   <div class="acciones">
 
     <div class="btn-group">
-      <a href="/admin/usuario">Nuevo Usuario</a>
+      <a href="/admin/usuario/">Nuevo Usuario</a>
     </div>
 
   </div>
