--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -36,9 +36,12 @@
       src="http://code.jquery.com/jquery-1.12.4.min.js"
       integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
       crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
+
   </head>
 
-  <body id="app" class="<%= bodyClasses.join(' ') %>" >
+  <body data-ng-app="app" id="app" class="<%= bodyClasses.join(' ') %>" >
 
     <header>
       <%- partial('../comun/navbar.ejs') %>
