--- a/views/usuarios/objetos/guardar/cuerpo.ejs
+++ b/views/usuarios/objetos/guardar/cuerpo.ejs
@@ -1,4 +1,4 @@
-<form id="guardar-usuario" data-ng-controller="ctrl">
+<form id="guardar-usuario" data-ng-controller="userGuardarCtrl">
 
   <div data-ng-if="!usuario.level || usuario.level > 1" class="form-block">
     <label for="nombreUsuario"><%= __("usuarios.username") %></label>
