--- a/views/layouts/admin-layout.ejs
+++ b/views/layouts/admin-layout.ejs
@@ -38,6 +38,10 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-multi-select/4.0.0/isteven-multi-select.min.js"></script>
+  <script>
+
+    var app = angular.module('app', [ "isteven-multi-select" ]);
+  </script>
 </head>
 
 <body data-ng-app="app"  id="app" class="<%= bodyClasses.join(' ') %>" >
