--- a/views/login/cuerpo.ejs
+++ b/views/login/cuerpo.ejs
@@ -1,3 +1,12 @@
+<style>
+  body > section
+  {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+  }
+</style>
 <script>
 
   $(document).on('submit', '#login-form',function (e) {
