--- a/views/login/objetos/admin-login-form.ejs
+++ b/views/login/objetos/admin-login-form.ejs
@@ -1,26 +1,25 @@
 
-<form id="login-form" class="login-form" >
+<form id="login-form" class="login-form w3-row w3-card-2 w3-padding" >
 
-  <div class="body">
-    <div class="form-block">
-      <input name="user" type="text">
+
+    <div class="form-block w3-col s12">
       <label for="user"><%= __("login.usuarioLabel") %></label>
+      <input class="w3-input" name="user" type="text">
+
     </div>
 
-    <div class="form-block">
-      <input name="password" type="password">
+    <div class="form-block w3-col s12">
       <label for="password"><%= __("login.contrasenaLabel") %></label>
-    </div>
-
-
-    <div class="form-btn-block">
-
-      <div class="btn">
-        <button class="enviar"  type="submit"><%= __("login.submitBtn")%></button>
-      </div>
+      <input class="w3-input" name="password" type="password">
 
     </div>
-  </div>
 
+
+    <div class="form-block w3-col s12 w3-margin-top">
+
+        <button class="enviar w3-right w3-btn"  type="submit"><%= __("login.submitBtn")%></button>
+
+
+    </div>
 
 </form>
