--- a/views/usuarios/objetos/listado/bottom.ejs
+++ b/views/usuarios/objetos/listado/bottom.ejs
@@ -1,8 +1,8 @@
 <footer>
-  <div class="acciones">
+  <div class="acciones form-block ">
 
     <div class="btn-group">
-      <a href="/admin/usuario/">Nuevo Usuario</a>
+      <a class="w3-btn" href="/admin/usuario/">Nuevo Usuario</a>
     </div>
 
   </div>
