--- a/views/usuarios/objetos/listado/bottom.ejs
+++ b/views/usuarios/objetos/listado/bottom.ejs
@@ -2,7 +2,7 @@
   <div class="acciones form-block ">
 
     <div class="btn-group">
-      <a class="w3-btn" href="/admin/usuario/">Nuevo Usuario</a>
+      <a class="w3-btn w3-right" href="/admin/usuario/">Nuevo Usuario</a>
     </div>
 
   </div>
