--- a/assets/styles/theme.less
+++ b/assets/styles/theme.less
@@ -85,12 +85,15 @@ body > header nav
 body > header nav a
 {
   padding: 18px;
-  float: left;
-  display: block;
-  width: 20%;
+  display: flex;
   text-align: center;
   position: relative;
+  flex: 1;
 
+}
+body > header nav a .text
+{
+  margin: auto;
 }
 body > header nav a .line
 {
@@ -99,12 +102,12 @@ body > header nav a .line
   -ms-transition: all 300ms;
   -o-transition: all 300ms;
   transition: all 300ms;
-  left: 65%;
+  left: 50%;
   width: 0%;
   height: 4px;
   background-color: @color3;
   display: block;
-
+  bottom: 8px;
   position: absolute;
   margin-top: 4px;
 }
@@ -265,6 +268,12 @@ body > header nav,body > header .mobile-bar
 {
   z-index: 1000;
 }
+body > header nav > .wrapper
+{
+  width: 100%;
+  display: flex;
+}
+
 @media screen and (max-width: 768px) {
 
   body > section
