--- a/views/usuarios/objetos/listado/cuerpo.ejs
+++ b/views/usuarios/objetos/listado/cuerpo.ejs
@@ -77,3 +77,21 @@
 
     });
   </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <video id="video"></video>
+  <script>
+    if(Hls.isSupported()) {
+      var video = document.getElementById('video');
+      var hls = new Hls();
+      hls.loadSource('http://localhost:2000/streaming/out.m3u8');
+      hls.attachMedia(video);
+      hls.on(Hls.Events.MANIFEST_PARSED,function() {
+        video.play();
+      });
+    }
+    else
+    {
+      alert("cant play hls");
+    }
+  </script>
