Agregados modulos manejo de sesiones + usuarios (en desarrollo)

--- a/views/home/cuerpo.ejs
+++ b/views/home/cuerpo.ejs
@@ -1,2 +1,8 @@
 
-<%- partial("objetos/cuerpo.ejs")%>
+<div class="main-container">
+
+  <%- partial("objetos/header.ejs") %>
+
+  <%- partial("objetos/cuerpo.ejs")%>
+
+</div>
