--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -105,9 +105,14 @@
 
     -->
 
+
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/utils.js"></script>
     <!--SCRIPTS END-->
+
+    <script src="/js/dependencies/sails.io.js" autoConnect="false"></script>
+
+
   </body >
 </html>
