--- a/views/layouts/login-layout.ejs
+++ b/views/layouts/login-layout.ejs
@@ -102,5 +102,8 @@
 <script src="/js/dependencies/sails.io.js"></script>
 <script src="/js/utils.js"></script>
 <!--SCRIPTS END-->
+
+<script src="/js/dependencies/sails.io.js" autoConnect="false"></script>
+
 </body>
 </html>
