--- a/views/layouts/admin-layout.ejs
+++ b/views/layouts/admin-layout.ejs
@@ -113,11 +113,29 @@
 
 
 
+
 <!--SCRIPTS-->
 <script src="/js/dependencies/sails.io.js"></script>
 <script src="/js/utils.js"></script>
 <!--SCRIPTS END-->
+
+<script src="/js/dependencies/sails.io.js" autoConnect="false"></script>
+
 <script type="text/javascript">
+
+  <% if(user)
+  {
+    %>
+  var socket = io.sails.connect();
+
+
+  io.socket.on('connect', function(){
+
+    console.log("Connected!");
+
+  });
+
+
   // The automatically-created socket is exposed as io.socket.
   // Use .on() to subscribe to the 'user' event on the client.
   // This event is sent by the Sails "create", "update",
@@ -126,12 +144,11 @@
   io.socket.on('user', function gotHelloMessage (data) {
     console.log('User alert!', data);
   });
-  // Using .get('/user') will retrieve a list of current User models,
-  // subscribe this socket to those models, AND subscribe this socket
-  // to notifications about new User models when they are created.
-  io.socket.get('/user', function gotResponse(body, response) {
-    console.log('Current users: ', body);
-  })
+
+  <%
+  }%>
+
+
 </script>
 
 </body >
